# cmake_sample

./: CMakeLists.txt  Toolchain-Darwin-x86_64.cmake  test.cpp
